# apppp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  gulpfile.js  index.html  main.cpp  package.json
ani-album-client/: .eslintrc.js  README.md  gen.sh  gulpfile.js  index.html  package.json  tsconfig.json  tslint.json
ani-album-client/css/: base.scss
ani-album-client/electron-v6.1-darwin-x64/: node_sqlite3.node
ani-album-client/protos/: ipc_pb.d.ts  ipc_pb.js
ani-album-client/src/common/: album.ts  image.ts  menu.ts  message.ts  workspace.ts
ani-album-client/src/main/: dal.ts  dataFolder.ts  events.ts  logger.ts  main.ts  menu.ts  microService.ts  photos.ts  sqliteHelper.ts  utils.ts
ani-album-client/src/main/easyipc/: easyipc.ts
ani-album-client/src/renderer/: App.scss  App.tsx  GridView.scss  GridView.tsx  Sidebar.scss  Sidebar.tsx  custom.d.ts  events.ts  pageKey.ts  renderer.ts  styles.ts  utils.ts
ani-album-client/src/renderer/AlbumContentPage/: AlbumContentPage.tsx  index.ts  styles.ts
ani-album-client/src/renderer/AlbumSummaryPage/: AlbumItem.tsx  AlbumSummaryPage.tsx  index.ts  styles.ts
ani-album-client/src/renderer/GridView/: GridView.scss  GridView.tsx  ImageItem.tsx
ani-album-client/src/renderer/Header/: EditButton.tsx  EditableTitle.tsx  Header.scss  Header.tsx  SearchHeader.scss  SearchHeader.tsx  index.ts  styles.ts
ani-album-client/src/renderer/ImageViewer/: CloseButton.scss  CloseButton.tsx  ImageViewer.scss  ImageViewer.tsx  ImageViewerCanvas.ts
ani-album-client/src/renderer/Modals/: ImportPhotosToAlbumModal.tsx  Modals.scss  Modals.tsx  NewAlbumModal.scss  NewAlbumModal.tsx  index.ts  modalTypes.ts  styles.ts
ani-album-client/src/renderer/MyPhotosPage/: MyPhotosPage.tsx  index.ts  styles.ts
ani-album-client/src/renderer/Search/: index.ts
ani-album-client/src/renderer/Search/SearchBox/: SearchBox.scss  SearchBox.tsx  styles.ts
ani-album-client/src/renderer/Search/SearchInput/: SearchInput.scss  SearchInput.tsx  styled.ts
ani-album-client/src/renderer/SearchBox/: SearchBox.scss  SearchBox.tsx
ani-album-client/src/renderer/SidebarTree/: SidebarTree.scss  SidebarTree.tsx  SidebarTreeItem.tsx  index.ts
ani-album-client/src/renderer/Slider/: Slider.scss  Slider.tsx
ani-album-client/src/renderer/TrafficLight/: TrafficLight.scss  index.tsx
ani-album-client/src/renderer/WorkspaceContentPage/: WorkspaceContentPage.tsx  WorkspaceItem.tsx  index.ts  styles.ts
ani-album-client/src/renderer/components/: Sidebar.scss  Sidebar.tsx
ani-album-client/src/renderer/components/Button/: Button.scss  Button.tsx  index.ts
ani-album-client/src/renderer/components/GridView/: GridView.scss  GridView.tsx  GridViewLayout.tsx  ImageItem.tsx
ani-album-client/src/renderer/components/ImportButton/: ImportButton.scss  ImportButton.tsx  index.ts
ani-album-client/src/renderer/components/Menu/: Menu.tsx  MenuItem.tsx  index.ts  styles.ts
ani-album-client/src/renderer/components/Modal/: Mask.tsx  Modal.scss  Modal.tsx
ani-album-client/src/renderer/components/PhotosCollectionItem/: PhotosCollectionItem.tsx  index.ts  styles.ts
ani-album-client/src/renderer/components/Popup/: Popup.tsx  styles.ts  types.ts  useCloseManager.tsx  useFocusManager.tsx
ani-album-client/src/renderer/components/Tooltip/: Animation.tsx  Tooltip.tsx  index.ts  styled.ts  types.ts
ani-album-client/src/renderer/data/: index.ts  tree.tsx  viewData.ts
ani-album-client/vectorious/: index.d.ts  types.d.ts  util.d.ts
ani-album-client/vectorious/core/: index.d.ts
classifier/: CMakeLists.txt  CMakeSettings.json
classifier/asset/: classifier.conf  labels_chinese.txt  labels_class.json  labels_class_chinese.txt
classifier/examples/: benchmark.cpp  client.cpp  example.cpp
classifier/includes/: classify.h  infer.h
classifier/src/: classify.cpp  main.cpp  opencvutils.cpp  torchutils.cpp
daemon/: .gitignore  CMakeLists.txt
daemon/classify/: .clang-format  CMakeLists.txt
daemon/classify/examples/: example.cpp
daemon/classify/includes/: classify.h  opencvutils.h  torchutils.h
daemon/classify/src/: infer.cpp
easyipc/: CMakeLists.txt  easyipc.cpp  easyipc.h  example.cpp  utils.h
ipc-message/: CMakeLists.txt  ipc.proto
ipc-message/ipc-message/: ipc.pb.cc  ipc.pb.h
src/main/: main.ts
src/renderer/: App.tsx
src/renderer/components/: Sidebar.tsx
thumbnail/: CMakeLists.txt  gen_thumbnails.cpp  gen_thumbnails.h  main.cpp  read_exif.cpp  read_exif.h  utils.h
